[workspace]
members = [
    "dioxus_style",
    "dioxus_style_macro"
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["JAI PRAKASH THAWAIT <jaiprakashthawait@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jaiprakash274/dioxus_style"  # Update with your actual GitHub username
homepage = "https://github.com/jaiprakash274/dioxus_style"
documentation = "https://docs.rs/dioxus_style"
rust-version = "1.70"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
